--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+ .deleteButton {
+background-color: red;
+color: white;
+padding:px 16px ;
+
+ }
+
 
 @keyframes logo-spin {
   from {
